# Premier-League-Predictor

./: .gitignore  README.md  pyproject.toml
premier_league_predictor/: __init__.py  predictor.py
