[tool.poetry]
name = "premier-league-predictor"
version = "0.1.0"
description = "A Premier League match prediction system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "premier_league_predictor"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']